@@ -1,3 +1,13 @@
+2007-02-28  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* w3m-filter.el (w3m-filter-rules): Add rules for the site of
+	Amazon and Mixi.
+	(w3m-filter-amazon-regxp): New option.
+	(w3m-filter-amazon-short-url-bottom): Ditto.
+	(w3m-filter-google): Add doc-string.
+	(w3m-filter-amazon): New function.
+	(w3m-filter-mixi): New function.
+
 2007-02-27  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* shimbun/sb-nikkansports.el (shimbun-nikkansports-group-table):
